.opsera-ch-flood/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ch-flood
  labels:
    app: ch-flood
    tenant: opsera
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: ch-flood
