.opsera-ch-flood/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ch-flood
  labels:
    app: ch-flood
    tenant: opsera
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: opsera-ch-flood-ENV.agent.opsera.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ch-flood
            port:
              number: 80
